--- a/Calculus_on_Manifolds.tex
+++ b/Calculus_on_Manifolds.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 \title{多変数の解析学}
-\author{榎田洋介\thanks{このノートはあくまで私的な勉強会の成果物を公開するものなので，私の所属などについては記しません．もし何らかの事情でそれらの情報をお探しの場合は http://ehlfi.niflh.net をご覧ください．この pdf の内容について，誤りなどにお気付きの場合は上記サイトから辿れる Twitter アカウントにご連絡ください．}}
+\author{榎田洋介\thanks{このノートはあくまで私的な勉強会の成果物を公開するものなので，私の所属などについては記しません．もし何らかの事情でそれらの情報をお探しの場合は http://ehlfi.niflh.net をご覧ください．}}
 \date{}
 \maketitle
 
