第三節冒頭に加筆

--- a/section3.tex
+++ b/section3.tex
@@ -9,8 +9,12 @@
 \end{dig}
 
 \begin{que}
-ところで，可算無限と非可算無限の違いだけは把握していないとこの節は読めないかもしれない．知らない場合は調べておいてください．それ以外の順序数に関する知識は一切必要としない（はず）．
+ところで，可算無限と非可算無限の違いだけは把握していないとこの節は読めないかもしれない．これは余談ではなくて，本当に「問」うておかないとこのあとを読むのに支障がでるから設置した，このノートにおいてはめずらしく「問」の体裁をなした問である．
 \end{que}
+
+\begin{dig}
+いっぽう，それ以上の集合に関する操作，たとえば順序数に関する一般論は一切必要としない（はず）．
+\end{dig}
 
 \begin{defi}
 単調増加な集合の族$A_1 \subset A_2 \subset \dotsb$が$A = \bigcup_{i=1}^\infty A_i$を充たすことを$A_i \uparrow A$と書く．単調減少な集合の族$B_1 \supset B_2 \supset \dotsb$が$B = \bigcap_{i=1}^\infty B_i$を充たすことを$B_i \downarrow B$と書く．
