--- a/acknowledgement.tex
+++ b/acknowledgement.tex
@@ -1,3 +1,3 @@
 \section*{謝辞}
 
-このノートは私が主催した勉強会を経て作られた（作られている）ノートである．勉強会の参加者である千葉直也氏，濱田将樹氏，今井雄毅氏，金子亮也氏，三井譲氏，森下真幸氏\footnote{氏名掲載の同意を頂いた方について，名字のアルファベット順に氏名を掲載しています．}からは，大小様々な質問を多数頂き，私の説明の不十分なところを補い，また話題を広げてくださった．勉強会の中で出た質問などに対する回答や議論のいくつかはこのノートに取り込まれた\footnote{取り込むのを後回しにしていることがらも多々あるが，それらもいずれは取り込みたいと思っています．ほんとだよ．}．厚く感謝申し上げる．なお，本文中に存在する誤りや不適切な記述の全ては，筆者である私の責に帰する．
+このノートは私が主催した勉強会を経て作られた（作られている）ノートである．勉強会の参加者である千葉直也氏，濱田将樹氏，今井雄毅氏，金子亮也氏，三井譲氏，森下真幸氏\footnote{氏名掲載の同意を頂いた方について，名字のアルファベット順に氏名を掲載しています．}からは，大小様々な質問を多数頂き，私の説明の不十分なところを補い，また話題を広げてくださった．勉強会の中で出た質問などに対する回答や議論のいくつかはこのノートに取り込まれた\footnote{取り込むのを後回しにしていることがらも多々あるが，それらもいずれは取り込みたいと思っています．ほんとだよ．}．また，このノートは GitHub Pages で公開されているが，その実装は永山涼雅氏による．厚く感謝申し上げる．なお，本文中に存在する誤りや不適切な記述の全ては，筆者である私の責に帰する．
