--- a/preamble.tex
+++ b/preamble.tex
@@ -64,6 +64,7 @@
 
 \newcommand{\Opensets}{\mathscr{O}}
 \newcommand{\Closedsets}{\mathscr{A}}
+\newcommand{\Sym}{\mathfrak{S}}
 \newcommand{\Natu}{\mathbb{N}}
 \newcommand{\Real}{\mathbb{R}}
 \newcommand{\Cpx}{\mathbb{C}}
@@ -74,4 +75,6 @@
 \DeclareMathOperator{\rot}{rot}
 \DeclareMathOperator{\grad}{grad}
 \DeclareMathOperator{\supp}{supp}
+\DeclareMathOperator{\Alt}{Alt}
+\DeclareMathOperator{\sgn}{sgn}
 \newcommand{\dif}{\mathop{}\!d}
