表記の微修正

--- a/section2.tex
+++ b/section2.tex
@@ -324,10 +324,7 @@ f(a+h) - f(a) &= h^1 \partial_1 f(b^1, a^2, \dots, a^n) \\
 \end{proof}
 
 \begin{que}[*]
-前定理における$C^1$級という仮定は，微分可能であるための必要条件とは限らない．
-\begin{itemize}
-\item 実際$f \colon \Real^m \to \Real^n$が微分可能でも各成分関数$f^i \colon \Real^m \to \Real$が$C^1$級であるとは限らないらしい．$m=n=1$の場合はそれはそうなのだが，そうでない例をまだ検討していない．
-\end{itemize}
+$f \colon \Real^m \to \Real^n$が微分可能だが$C^1$級ではない例があるらしい．$m=n=1$の場合はそれはそうなのだが，そうでない例をまだ検討していない．
 \end{que}
 
 さて，微分可能性から偏微分係数の存在が合成則なしで示せて，かつ偏微分係数の連続性から微分可能性を言うのに合成則を使っていないので，ここまでの議論で合成則はなくてもよかった．しかしながら合成則は次の形の（特に実用上の計算において）重要な帰結を持つ；
