--- a/preamble.tex
+++ b/preamble.tex
@@ -39,6 +39,7 @@
 \declaretheorem[name=余談,numberlike=thm]{dig}
 \declaretheorem[name=主張,numberlike=thm]{state}
 \declaretheorem[name=例,numberlike=thm]{exm}
+\declaretheorem[name=注意,numberlike=thm]{rem}
 \newtheorem*{thm*}{定理}
 \newtheorem*{lem*}{補題}
 \newtheorem*{defi*}{定義}
@@ -77,4 +78,7 @@
 \DeclareMathOperator{\supp}{supp}
 \DeclareMathOperator{\Alt}{Alt}
 \DeclareMathOperator{\sgn}{sgn}
+\DeclareMathOperator{\Tan}{Tan}
+\DeclareMathOperator{\id}{id}
+\DeclareMathOperator{\Vect}{Vect}
 \newcommand{\dif}{\mathop{}\!d}
