ノーテーションの修正

--- a/preamble.tex
+++ b/preamble.tex
@@ -72,6 +72,7 @@
 \newcommand{\Quad}{\mathbb{Q}}
 \newcommand{\Tensor}{\mathcal{T}}
 \newcommand{\Sphere}{\mathbb{S}}
+\newcommand{\GrassAlg}{\bigwedge}
 \DeclareMathOperator{\diver}{div}
 \DeclareMathOperator{\rot}{rot}
 \DeclareMathOperator{\grad}{grad}
