外微分の定義まで

--- a/preamble.tex
+++ b/preamble.tex
@@ -73,6 +73,7 @@
 \newcommand{\Tensor}{\mathcal{T}}
 \newcommand{\Sphere}{\mathbb{S}}
 \newcommand{\GrassAlg}{\bigwedge}
+\newcommand{\DiffForm}{\Omega}
 \DeclareMathOperator{\diver}{div}
 \DeclareMathOperator{\rot}{rot}
 \DeclareMathOperator{\grad}{grad}
