微分形式の基本性質を一通り書いた．外微分が大変だった

--- a/section2.tex
+++ b/section2.tex
@@ -205,7 +205,7 @@ f(a+h) - f(a) - \lambda_a(h) = (f^1(a+h) - f^1(a) - d{f^1}_a(h), \dots, f^n(a+h)
 したがって$d$はおそらくどこかの圏からどこかの圏への共変関手である．このことをきちんと述べるにはベクトル束に関する議論が必要になる気がする．しかしこのノートでベクトル束の話まで書くのはやりすぎな気もしている．ちゃんと勉強したことがないので，やってみたくはあるのだが．
 \end{que}
 
-\begin{cor}
+\begin{cor}[微分の線型性と Leibniz 則]
 $f, g \colon \Real^n \to \Real$が$x$で微分可能であるならば，$f+g, fg$もまた微分可能であって，
 \begin{align}
 d(f+g)_x = df_x+dg_x \\
