--- a/preamble.tex
+++ b/preamble.tex
@@ -70,6 +70,7 @@
 \newcommand{\Real}{\mathbb{R}}
 \newcommand{\Cpx}{\mathbb{C}}
 \newcommand{\Quad}{\mathbb{Q}}
+\newcommand{\Zahl}{\mathbb{Z}}
 \newcommand{\Tensor}{\mathcal{T}}
 \newcommand{\Sphere}{\mathbb{S}}
 \newcommand{\GrassAlg}{\bigwedge}
