多様体上の微分形式まで

--- a/preamble.tex
+++ b/preamble.tex
@@ -73,6 +73,7 @@
 \newcommand{\Zahl}{\mathbb{Z}}
 \newcommand{\Tensor}{\mathcal{T}}
 \newcommand{\Sphere}{\mathbb{S}}
+\newcommand{\Hyp}{\mathbb{H}}
 \newcommand{\GrassAlg}{\bigwedge}
 \newcommand{\DiffForm}{\Omega}
 \DeclareMathOperator{\diver}{div}
@@ -85,3 +86,4 @@
 \DeclareMathOperator{\id}{id}
 \DeclareMathOperator{\Vect}{Vect}
 \newcommand{\dif}{\mathop{}\!d}
+\DeclareMathOperator{\Image}{Im}
