--- a/section1.tex
+++ b/section1.tex
@@ -366,7 +366,7 @@ $A \subset \Real^m$を部分集合とする．$f \colon A \to \Real^n$が$a \in 
 
 上記のような，いわゆる$\varepsilon$-$\delta$論法は必要なときは必要である．特に誤差の評価をより具体的にする必要があるなどの場合は上記の定義のほうがよい．他方，実際にはこの定義は（一見すると極限を用いない）別の形に述べ直すことができる．誤差に関する具体的な評価が必要ない場合，たとえば単に連続であることを証明したい場合などは以下に述べる特徴づけのほうが使いやすい．
 
-\begin{thm}
+\begin{thm}\label{開集合の引き戻しは開集合}
 $A \subset \Real^m$を部分集合とする．$f \colon A \to \Real^n$に対して以下は同値である．
 \begin{itemize}
 \item $f$は連続．
