第6節を含める

--- a/Calculus_on_Manifolds.tex
+++ b/Calculus_on_Manifolds.tex
@@ -37,9 +37,9 @@
 \newpage
 
 \include{./section5.tex}
-%
-%\newpage
-%
-%\include{./section6.tex}
+
+\newpage
+
+\include{./section6.tex}
 
 \end{document}
