Stokes の定理の証明まで

--- a/section5.tex
+++ b/section5.tex
@@ -891,7 +891,7 @@ $M = \Real^n$とし，$U \subset M$を開集合または閉集合とする．更
 \end{equation}で定める（右辺は Lebesgue 測度に関する積分）．
 \end{defi}
 
-\begin{prop}
+\begin{prop}\label{微分形式の積分はwell-defined}
 上記の微分形式の積分の定義は well-defined である．すなわち，$y$ならびに$z$をそれぞれ$\det J_y(p)>0$および$\det J_z(p) > 0$を充たすような$U$上の座標系とし，$\omega$の2通りの座標表示を
 \begin{equation}
 \omega = f^y \dif y^1 \wedge \dots \wedge \dif y^n = f^z \dif z^1 \wedge \dots \wedge \dif z^n
